using System;

namespace People
{
    /*
      * The flyweight pattern is mainly implemented to
      * demonstrate the pattern, not because it is the most natural
      * use of it.
      */
    
    
    /// <summary>
    /// This represents an image that will displayed
    /// with each person. 
    /// </summary>
    public class PersonImage
    {
        public string Image { get; set; } 
    }
}