@startuml Class diagram 



namespace item {
    interface Item {
        + <<Property>> Owner : Person 
        ~ GetPrice() : float
        ~ GetCondition() : String
        ~ GetDamage() : String
        ~ GetModification() : String
        ~ GetInformation() : String 
    }

    People.Person o-- "*" Item

    class ConcreteItem implements Item {
        / Name : String 
        + <<Property>> Owner : Person
        - _price : float
        + ConcreteItem(price : float, owner : Person)
        + GetPrice() : float
        + GetCondition() : string
        + GetDamage() : string
        + GetModification() : string
        + GetInformation() : string
    }


    abstract ItemDecorator implements Item {
        - _item : IItem
        # Random : Random
        + <<Property>> Owner : Person
        # PriceAdjustment : int
        # ItemDecorator(original : IItem)
        + GetInformation() : string
        
    }

    ItemDecorator "1" o-- Item 


    class PerfectConditionItemDecorator extends ItemDecorator{
        + GetPrice() : float
        + GetCondition() : string
        + PerfectConditionItemDecorator(original IItem)
    }
    
    class NoDamageItemDecorator extends ItemDecorator{
        + GetPrice() : float
        + GetDamage() : string
        + NoDamageItemDecorator(original IItem)
    }
    
    class WithWingsModificationItemDecorator extends ItemDecorator{
        + GetPrice() : float
        + GetModification() : string
        + WithWingsItemDecorator(original IItem)
    }

    note "More in implementation" as MoreInImplementation
    MoreInImplementation .. ItemDecorator


    enum Decoration {
        NoDamage,
        PerfectCondition,
        WithWings, 
    }

    ItemFactory -- Decoration : uses 

    class ItemFactory {
        + getNew : Item  
        
    }

    ItemFactory -- Item : creates 
}

namespace People {
    class Wallet {
        + <<Property>> Balance : float 
        + Wallet ()
    }

    abstract Person {
        + <<Property>> Name : String 
        + <<Property>> Image : String 
        + <<Property>> Wallet : Wallet 
        # Items : List<Item> 
        # Person(name : string)
        + GetItems() List<IItem>
    }

    Wallet "1" --* Person
    Person -- FleaMarket.Market : trades 


    class Customer extends Person {
        + Customer(name : string)
        - AttemptBut(e : EventArgs) : void
        
    }

    class Salesman extends Person {
        - _totalItemCount : int
        + Haggle(priceOfItem : float, customerBalance : float) : bool
        + Salesman(name : string)
        + SellItem() : void
        + Haggle(priceOfItem : float, customerBalance : float) : bool
        + GetItemCount() : int
    }

    class CompositeSalesman extends Salesman {
        + CompositeSalesman(salesman : Salesman)
        - _salesmen : List<Salesman>
    }
    
    class PersonFactory {
        - {static} Names : ArrayList<string>
        - {static} Random : Random
        + {static} GetPerson(type PersonType) : Person
        - {static} GetRandomName() : string
    }
    
    PersonFactory -- FleaMarket.Simulation
    
    PersonFactory -- Person

    class PersonImage {
        + <<Property>> string : Image
    }

    class PersonImagePointer {
        + <<Property>> {static} PersonImage : PersonImage 
    }

    note top of PersonImagePointer : minimal Flyweight-pattern implementation

    PersonImagePointer o-- PersonImage
    Person *-- PersonImagePointer

}

namespace FleaMarket {
    

    
    note "Singleton" as singleton
    class Market {
        + AddItem(item : IItem) : void  
        + sellItem(item : Item) : void 
        + EvenHappening : EventHandler        
        + {static}<<Property>> Instance : Market  
        - {static}_market : Market
        - {static}Padlock : object
        - _items : List<IItem>
        - _staticLock : object
        + BuyItem(customer : Customer, item : IItem) : void
        - Market() : void 
        - ItemForSaleEvent(e : EventArgs) : void
        - DoTransaction(customer : Customer, seller : Salesman, item : IItem, isBargain : bool) : void
    }

    Market .. singleton


    class Program { 
        + main() : void
    }

    class Simulation {
        - _random : Random
        - _saleCount : int
        - _customers : List<Customer> 
        - _salesmen : List<Salesman> 
        ~ run() : void 
        - Simulation(saleCount : int)
        - GetRandomSellers(): Salesman
        - GiveItemsTo(persons : IEnumerable<Person>): void
        - PopulateSalesmen() List<Salesman>
        - PopulateCustomers() List<Customer>
        - PopulatePersons() List<Person>
        
        
    }

    Program -- "1" Simulation : starts

    FleaMarket.Simulation -- item.ItemFactory : gets something to sell 

}


@enduml